--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,7 @@ dependencies = [
     "click>=8.3.0",
     "rich>=14.0",
     "matplotlib>=3.10.6",
-    "PyQt5>=5.15.11",
-    "pymupdf>=1.26.4",
-    "PyQtWebEngine>=5.15.7"
+    "PyQt5>=5.15.11"
 ]
 license = "MIT"
 authors = [
